Fix OtherPlayersController layout problem

--- a/src/src/main/resources/css/OtherPlayers.css
+++ b/src/src/main/resources/css/OtherPlayers.css
@@ -29,10 +29,6 @@
 }
 
 
-#detailAnchor{
-   /* -fx-background-image: url('../images/ui-images/detailBg.png'); */
-}
-
 #outerPane{
     -fx-background-color: transparent;
 }
@@ -54,4 +50,12 @@
     -fx-stroke-width: 1px;
 }
 
+
+#outerPane {
+    -fx-border-width: 0 2px 2px 2px;
+    -fx-border-color: linear-gradient(to right top, #604040, #894f33, #996c0d, #849400, #11be18);
+    -fx-border-radius: 0 0 10px 10px;
+    -fx-background-color:  rgba(0,0,0,0.8);
+    -fx-background-radius: 0 0 10px 10px;
+}
 
